# eazzmeetings-backend

./: .gitignore  A.HTML  check_routes.py  debug_server.py  main.py  pyproject.toml
app/: env_settings.py  security.py  server.py
app/controllers/: __init__.py  auth_ctrl.py  convert_ctrl.py  meetings_ctrl.py  mom_ctrl.py  recordings_ctrl.py  transcribe_ctrl.py
app/models/database/: __init__.py  identities_collection.py  meeting_collection.py  mom_collection.py  recordings_collection.py  users_collection.py
app/routers/: __init__.py  auth_router.py  convert_router.py  meetings_router.py  mom_router.py  recordings_router.py  transcribe_router.py  users_router.py
app/schemas/: __init__.py  asssets_schema.py  common_schema.py  media_schema.py  meetings_schema.py  mom_schema.py  recordings_schema.py  users_schema.py
app/services/: llms.py  mom_service.py  storage.py  transcribers.py
app/templates/: mom.html
app/utils/: __init__.py  audio.py  exception_handler.py
documentation/: implementation_plan.md  project_tasks.md  walkthrough_auth_audio.md  workflow.md
verification/: debug_mistral.py  manual_flow.py  verify_audio.py  verify_auth.py  verify_media.py  verify_mom.py  verify_security.py  verify_transcription.py  verify_websocket_auth.py
