[project]
name = "eazzmeetings"
version = "0.1.0"
description = "Eazzmeetings"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "accelerate>=1.12.0",
    "aiofiles>=25.1.0",
    "argon2-cffi>=25.1.0",
    "av>=16.1.0",
    "beanie>=2.0.1",
    "fastapi[standard]>=0.128.0",
    "groq>=0.30.0,<1.0.0",
    "hf-xet>=1.2.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-mistralai>=1.1.1",
    "langgraph>=1.0.8",
    "librosa>=0.11.0",
    "mistralai>=1.10.1",
    "motor>=3.7.1",
    "numba>=0.60.0",
    "passlib[bcrypt]>=1.7.4",
    "pylint>=4.0.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "soundfile>=0.13.1",
    "streamlit>=1.53.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "websockets>=16.0",
]
